# proposal_extraction_benchmarks

./: .env.example  .gitignore  README.md  constants.py  main.py  pyproject.toml
extractors/: base.py  pdf_plumber.py  py_mupdf.py  py_pdfium2.py
instructions/: geico.py  progressive.py
schemas/: base.py
